

RELEASE NOTES
=============


2.39.1 - March 31, 2010

    Added a new entity directive, alias/2, supporting the definition of
    compile-time object aliases. This directive may be used to abbreviate
    long object names or to make it easier to switch between objects
    providing alternative implementations of the same protocol.

    Updated the Logtalk compiler to warn the user when finding deprecated
    directives.

    Updated the Logtalk compiler to recognize "prolog_compatible_version"
    and "tabling" as valid flags.

    Updated the Logtalk compiler to compile settings files with the compiler
    flag "altdirs" turned off in order to avoid problems with directory
    permissions for back-end Prolog compilers, such as Ciao and XSB, which
    require the first run of Logtalk to be made by an administrative user.

    Corrected a bug in the Logtalk compiler that forced recompilation of
    source files when the "smart_compilation" flag was set to "on".

    Corrected an erroneous compiler warning when reporting referenced but
    unknown objects when using the {Object}::Message notation. Thanks to
    Parker Jones for the bug report.

    Corrected a bug in the <</2 control construct where errors would be
    reported without an error/3 wrapper. Thanks to Parker Jones for the
    bug report.

    Updated the SWI-Prolog and YAP config files in order to recognize and
    compile the proprietary directive create_prolog_flag/3.

    Updated the ECLiPSe config files to treat numbervars/3 as a built-in
    predicate.

    Updated the file system utility predicates in the XSB config file in
    order to ensure full expansion of paths into full paths.

    Updated the CxProlog config file to workaround a wrong priority for the
    standard **/2 operator ("xfx" instead of "xfy"). Updated the CxProlog
    integration scripts for both POSIX and Windows systems in order to use
    the "--script" command-line option, thus freeing the "--goal" option.
